force-app/main/default/objects/Event__c/fields/Evemt_Type__c.field-meta.xml
<CustomField>
    <fullName>Evemt_Type__c</fullName>
    <label>Evemt Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Networking Event</fullName>
            </value>
            <value>
                <fullName>Training Session</fullName>
            </value>
            <value>
                <fullName>Fundraising Event</fullName>
            </value>
            <value>
                <fullName>Product Launch</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Panel Discussion</fullName>
            </value>
            <value>
                <fullName>Roundtable</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
            <value>
                <fullName>Community Outreach</fullName>
            </value>
            <value>
                <fullName>Annual General Meeting</fullName>
            </value>
            <value>
                <fullName>Career Fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>