force-app/main/default/objects/Event__c/fields/Organizer_Name__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Name__c</fullName>
    <label>Organizer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>