force-app/main/default/objects/Event__c/fields/Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline__c</fullName>
    <label>Registration Deadline</label>
    <required>true</required>
    <type>Date</type>
</CustomField>